--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,15 @@
       "email": "highlyprofessionalscum@gmail.com"
     }
   ],
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/highlyprofessionalscum/twig-cache-extension.git"
+    }
+  ],
   "require": {
     "php": "^5.6|^7.0",
-    "asm89/twig-cache-extension": "^1.3"
+    "highlyprofessionalscum/twig-cache-bundle": "dev-master"
   },
   "require-dev": {
     "symfony/framework-bundle": "^4.2",
