--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   ],
   "require": {
     "php": "^5.6|^7.0",
-    "highlyprofessionalscum/twig-cache-extension": "dev-master"
+    "highlyprofessionalscum/twig-cache-extension": "1.1.*"
   },
   "require-dev": {
     "symfony/framework-bundle": "^4.2",
@@ -39,7 +39,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0-dev"
+      "dev-master": "1.0.*"
     }
   },
   "scripts": {
