--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   ],
   "require": {
     "php": "^5.6|^7.0",
-    "highlyprofessionalscum/twig-cache-extension": "1.1.*"
+    "highlyprofessionalscum/twig-cache-extension": "dev-master"
   },
   "require-dev": {
     "symfony/framework-bundle": "^4.2",
