--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     }
   ],
   "require": {
-    "php": "^5.6|^7.0",
+    "php": "^7.1.3",
     "highlyprofessionalscum/twig-cache-extension": "dev-master"
   },
   "require-dev": {
